# skyclaw-private

./: .env.example  Cargo.toml  README.md  UPDATE_GUIDE.md  build.sh  deploy.sh  fix.md  install-local.sh  install-server.sh  install.sh  push.sh  server-setup.sh  server-update.sh  skyclaw-dashboard.py  skyclaw.toml  start.sh  update.sh
Claude-Production-Grade-Suite/.orchestrator/: settings.md
Claude-Production-Grade-Suite/.orchestrator/receipts/: T1-product-manager.json  T2-solution-architect.json
Claude-Production-Grade-Suite/solution-architect/: system-design.md
config/: default.toml
crates/skyclaw-agent/: Cargo.toml
crates/skyclaw-agent/src/: lib.rs  (+6 more)
crates/skyclaw-automation/: Cargo.toml
crates/skyclaw-channels/: Cargo.toml
crates/skyclaw-channels/src/: lib.rs  telegram.rs
crates/skyclaw-core/: Cargo.toml
crates/skyclaw-filestore/: Cargo.toml
crates/skyclaw-gateway/: Cargo.toml
crates/skyclaw-memory/: Cargo.toml
crates/skyclaw-observable/: Cargo.toml
crates/skyclaw-providers/: Cargo.toml
crates/skyclaw-skills/: Cargo.toml
crates/skyclaw-tools/: Cargo.toml
crates/skyclaw-vault/: Cargo.toml
deploy/: mcp.toml  opencode.service  skyclaw-dashboard.service  skyclaw.service
docs/: MODEL_REGISTRY.md  SKYCLAW_VISION.md
docs/openclaw/: ARCHITECTURE.md
docs/zeroclaw/: ARCHITECTURE.md
old/: install.sh
skills/: deployment.md  devops-core.md  incident-response.md  opencode-repair.md  planning-and-projects.md  self-management.md  study-and-learning.md  telegram-features.md
src/: main.rs
workspace/: HEARTBEAT.md  backup.sh  restore.sh
(+39 files in other folders)
