[package]
name = "skyclaw-channels"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Messaging channel integrations for SkyClaw"

[features]
telegram = ["dep:teloxide"]
discord = ["dep:serenity", "dep:poise"]
slack = ["dep:reqwest"]
whatsapp = ["dep:reqwest"]

[dependencies]
skyclaw-core.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true

# Optional: Telegram
teloxide = { workspace = true, optional = true }

# Optional: Discord
serenity = { workspace = true, optional = true }
poise = { workspace = true, optional = true }

# Optional: Slack & WhatsApp
reqwest = { workspace = true, optional = true }
